force-app/main/default/objects/Job_Application__c/fields/Average_Interview_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Interview_Rating__c</fullName>
    <description>Average rating across all interview feedback for this job application</description>
    <inlineHelpText>Calculated average of all interview feedback ratings for this application</inlineHelpText>
    <label>Average Interview Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>