force-app/main/default/objects/Job_Application__c/fields/Employer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Employer_Formula__c</fullName>
    <formula>Job__r.Employer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer</label>
    <type>Text</type>
</CustomField>