force-app/main/default/objects/Job_Application__c/fields/Federal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax__c</fullName>
    <label>Federal Tax (Yearly)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>