force-app/main/default/objects/Job_Application__c/fields/Feedback_Summary__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Summary__c</fullName>
    <description>Summary of key feedback points from all interviews</description>
    <inlineHelpText>Automatically generated summary of strengths and improvement areas from interview feedback</inlineHelpText>
    <label>Feedback Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>