force-app/main/default/objects/Job_Application__c/fields/Interview_Success_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_Success_Score__c</fullName>
    <description>Calculated score based on interview feedback ratings and outcomes</description>
    <inlineHelpText>Automatically calculated based on interview feedback. Higher scores indicate better interview performance.</inlineHelpText>
    <label>Interview Success Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>