force-app/main/default/objects/Job_Application__c/fields/IsCreated__c.field-meta.xml
<CustomField>
    <fullName>IsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCreated</label>
    <type>Checkbox</type>
</CustomField>