force-app/main/default/objects/Job_Application__c/fields/Last_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interview_Date__c</fullName>
    <description>Date of the most recent interview for this job application</description>
    <inlineHelpText>Automatically updated when new interview feedback is added</inlineHelpText>
    <label>Last Interview Date</label>
    <type>DateTime</type>
</CustomField>