force-app/main/default/objects/Job_Application__c/fields/Learning_Notes__c.field-meta.xml
<CustomField>
    <fullName>Learning_Notes__c</fullName>
    <label>Learning Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>