force-app/main/default/objects/Job_Application__c/fields/Market_Analysis_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis_Date__c</fullName>
    <description>Date when the last market analysis was performed for this job application</description>
    <inlineHelpText>The date when market salary data was last analyzed and updated for this position.</inlineHelpText>
    <label>Market Analysis Date</label>
    <type>Date</type>
</CustomField>