force-app/main/default/objects/Job_Application__c/fields/Market_Salary_Max__c.field-meta.xml
<CustomField>
    <fullName>Market_Salary_Max__c</fullName>
    <description>Maximum salary for this position based on market analysis</description>
    <inlineHelpText>The maximum salary range for this position based on current market data analysis.</inlineHelpText>
    <label>Market Salary Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>