force-app/main/default/objects/Job_Application__c/fields/Market_Salary_Median__c.field-meta.xml
<CustomField>
    <fullName>Market_Salary_Median__c</fullName>
    <description>Median salary for this position based on market analysis</description>
    <inlineHelpText>The median (50th percentile) salary for this position based on current market data analysis.</inlineHelpText>
    <label>Market Salary Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>