force-app/main/default/objects/Job_Application__c/fields/Market_Salary_Min__c.field-meta.xml
<CustomField>
    <fullName>Market_Salary_Min__c</fullName>
    <description>Minimum salary for this position based on market analysis</description>
    <inlineHelpText>The minimum salary range for this position based on current market data analysis.</inlineHelpText>
    <label>Market Salary Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>