force-app/main/default/objects/Job_Application__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Recommended next steps based on interview feedback analysis</description>
    <inlineHelpText>Automatically generated recommendations based on interview performance and feedback</inlineHelpText>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>