force-app/main/default/objects/Job_Application__c/fields/Primary_Contact_Formula__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Formula__c</fullName>
    <description>Uses Master-Detail field to access Primary Contact on Job sObj.</description>
    <formula>Job__r.Primary_Contact__r.FirstName &amp; &apos; &apos; &amp; Job__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>