force-app/main/default/objects/Job_Application__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Low Interest</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Some Interest</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Moderate Interest</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - High Interest</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Very High Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>