force-app/main/default/objects/Job_Application__c/fields/Salary_Competitiveness__c.field-meta.xml
<CustomField>
    <fullName>Salary_Competitiveness__c</fullName>
    <description>Rating of how competitive the offered salary is compared to market rates</description>
    <inlineHelpText>Competitiveness rating: Excellent (75th+ percentile), Good (median+), Fair (minimum+), Below Market (under minimum).</inlineHelpText>
    <label>Salary Competitiveness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Below Market</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>