force-app/main/default/objects/Job_Application__c/fields/Take_Home_Pay_Yearly__c.field-meta.xml
<CustomField>
    <fullName>Take_Home_Pay_Yearly__c</fullName>
    <label>Take Home Pay (Yearly)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>