force-app/main/default/objects/Job_Application__c/fields/Total_Interview_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Interview_Count__c</fullName>
    <description>Total number of interviews conducted for this job application</description>
    <inlineHelpText>Count of all interview feedback records associated with this application</inlineHelpText>
    <label>Total Interview Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>