force-app/main/default/objects/Job_Application__c/validationRules/Application_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Date_Validation</fullName>
    <active>true</active>
    <description>Validates application date is not in the future and not too far in the past</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Application_Date__c)),
    OR(
        Application_Date__c &gt; TODAY(),
        Application_Date__c &lt; TODAY() - 365
    )
)</errorConditionFormula>
    <errorDisplayField>Application_Date__c</errorDisplayField>
    <errorMessage>Application date cannot be in the future or more than 1 year in the past.</errorMessage>
</ValidationRule>