force-app/main/default/objects/Job_Application__c/validationRules/Learning_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Learning_Validation_Rule</fullName>
    <active>true</active>
    <description>Learning exercise: Prevent high ratings without salary information</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Rating__c, &quot;5&quot;),
        ISBLANK(Salary__c)
    )</errorConditionFormula>
    <errorDisplayField>Rating__c</errorDisplayField>
    <errorMessage>Cannot rate as &quot;Very High Interest&quot; (5) without providing salary information.</errorMessage>
</ValidationRule>