force-app/main/default/objects/Job_Application__c/validationRules/Salary_Range_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Range_Validation</fullName>
    <active>true</active>
    <description>Validates that salary is within reasonable range and follows business rules</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Salary__c)),
    OR(
        Salary__c &lt; 20000,
        Salary__c &gt; 1000000,
        AND(
            ISPICKVAL(Status__c, &quot;Applied&quot;),
            Salary__c &gt; 500000
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Salary must be between $20,000 and $1,000,000. For Applied status, salary cannot exceed $500,000 without approval.</errorMessage>
</ValidationRule>