force-app/main/default/objects/Job_Application__c/validationRules/Status_Progression_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Progression_Validation</fullName>
    <active>true</active>
    <description>Validates proper status progression and prevents invalid status changes</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    OR(
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &quot;Closed&quot;),
            NOT(ISPICKVAL(Status__c, &quot;Applied&quot;))
        ),
        AND(
            ISPICKVAL(PRIORVALUE(Status__c), &quot;Accepted&quot;),
            NOT(ISPICKVAL(Status__c, &quot;Closed&quot;))
        ),
        AND(
            ISPICKVAL(Status__c, &quot;Negotiating&quot;),
            NOT(ISPICKVAL(PRIORVALUE(Status__c), &quot;Interviewing&quot;))
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Invalid status change. Please follow proper progression: Applied → Interviewing → Negotiating → Accepted/Closed. Closed applications can only be reopened to Applied status.</errorMessage>
</ValidationRule>