force-app/main/default/objects/Job_Application__c/listViews/Accepted.listView-meta.xml
<ListView>
    <fullName>Accepted</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>Take_Home_Pay_Yearly__c</columns>
    <columns>Take_Home_Pay_Monthly__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Offers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>