force-app/main/default/objects/Job_Application__c/listViews/All_Job_Applications.listView-meta.xml
<ListView>
    <fullName>All_Job_Applications</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>Rating__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Job Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>