force-app/main/default/objects/Job_Application__c/listViews/Needs_Follow_Up.listView-meta.xml
<ListView>
    <fullName>Needs_Follow_Up</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Follow_Up_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Needs Follow-Up</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>