force-app/main/default/objects/Job_Application__c/listViews/Negotiating.listView-meta.xml
<ListView>
    <fullName>Negotiating</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>Follow_Up_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Negotiating</value>
    </filters>
    <label>Negotiating</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>