force-app/main/default/objects/Job_Application__c/listViews/Recent_Applications.listView-meta.xml
<ListView>
    <fullName>Recent_Applications</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recent Applications (Last 30 Days)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>