force-app/main/default/objects/Job_Application__c/listViews/Remote_Positions.listView-meta.xml
<ListView>
    <fullName>Remote_Positions</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Salary__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Rating__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Remote</value>
    </filters>
    <label>Remote Positions</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>