force-app/main/default/objects/Job_Application__c/listViews/Top_Salary.listView-meta.xml
<ListView>
    <fullName>Top_Salary</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Position_Title__c</columns>
    <columns>Salary__c</columns>
    <columns>Status__c</columns>
    <columns>Location__c</columns>
    <columns>Rating__c</columns>
    <columns>Take_Home_Pay_Yearly__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Salary__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Top Salary Opportunities</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>